# langgraph-functional-apis

parallelization_lg/: pyproject.toml
parallelization_lg/src/parallelization_lg/: __init__.py  main.py
prompt_chaining_lg/: fun_fact.md  pyproject.toml
prompt_chaining_lg/src/prompt_chaining_lg/: __init__.py  main.py
router_lg/: pyproject.toml
router_lg/src/router_lg/: __init__.py  main.py
simpleflow/: pyproject.toml
simpleflow/src/simpleflow/: __init__.py  main.py
